--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
+    "vite-plugin-cp": "^1.0.0",
     "vituum": "^1.0.0"
   },
   "dependencies": {
